--- a/src/main/webapp/WEB-INF/views/StartPosition.html
+++ b/src/main/webapp/WEB-INF/views/StartPosition.html
@@ -80,12 +80,12 @@ left = 80%;
         <button type="submit">Journal</button>
     </div>
 </form>
-<form method="Post" action="Person">
+<form method="Get" action="Person">
     <div class="container2">
         <button type="submit" >Create person</button>
     </div>
 </form>
-<form method="Post" action="Setting">
+<form method="post" action="Setting">
     <div class="container3">
         <button type="submit">Settings</button>
     </div>
