--- a/src/main/webapp/WEB-INF/views/StartPosition.html
+++ b/src/main/webapp/WEB-INF/views/StartPosition.html
@@ -75,22 +75,22 @@ left = 80%;
     </style>
 </head>
 <body>
-<form method="get" action="Journal">
+<form method="Post" action="Journal">
     <div class="container1">
         <button type="submit">Journal</button>
     </div>
 </form>
-<form method="Get" action="Person">
+<form method="Post" action="Person">
     <div class="container2">
         <button type="submit" >Create person</button>
     </div>
 </form>
-<form method="post" action="Setting">
+<form method="get" action="Setting">
     <div class="container3">
         <button type="submit">Settings</button>
     </div>
 </form>
-<form method="get" action="Exit">
+<form method="Post" action="Exit">
     <div class="container4">
         <button type="submit">Exit</button>
     </div>
