--- a/src/main/webapp/WEB-INF/views/PersonView.html
+++ b/src/main/webapp/WEB-INF/views/PersonView.html
@@ -113,7 +113,7 @@ span.psw {
         <label><b>Classsification</b></label>
         <select size="1"  name="status" required="true" >
             <option selected>Choose a classsification</option>
-            <div th:utext = "${options}"/>
+            <!--<div th:utext = "${options}"/>-->
         </select>
         </div>
 
