+ Login and password authorization.
On the "Settings" page, when loading the View, a list is displayed from the "Status" and "Predmet" tables.
Added the ability to delete and add positions, as well as dynamic page refresh.

On the "Persons" page, when loading the View, a list from the "Status" table is displayed.

-
JournalViev;

in procces:
add person

--- a/src/main/webapp/WEB-INF/views/PersonView.html
+++ b/src/main/webapp/WEB-INF/views/PersonView.html
@@ -111,16 +111,13 @@ span.psw {
         </div>
         <div class="containerright">
         <label><b>Classsification</b></label>
-        <select size="1"  name="status" required="true" >
-            <option selected>Choose a classsification</option>
-            <!--<div th:utext = "${options}"/>-->
+        <select size="1"  required="true" >
+            <option selected>Choose a classification</option>
+            <div th:utext = "${options}"/>
         </select>
         </div>
-
     </div>
-
 </div>
-    <a th:text = "${a}"/>
 </form>
 </body>
 </html>
