--- a/src/main/webapp/WEB-INF/views/StartPosition.html
+++ b/src/main/webapp/WEB-INF/views/StartPosition.html
@@ -75,12 +75,12 @@ left = 80%;
     </style>
 </head>
 <body>
-<form method="Post" action="Journal">
+<form method="get" action="Journal">
     <div class="container1">
         <button type="submit">Journal</button>
     </div>
 </form>
-<form method="Post" action="Person">
+<form method="get" action="Person">
     <div class="container2">
         <button type="submit" >Create person</button>
     </div>
@@ -90,7 +90,7 @@ left = 80%;
         <button type="submit">Settings</button>
     </div>
 </form>
-<form method="Post" action="Exit">
+<form method="get" action="Exit">
     <div class="container4">
         <button type="submit">Exit</button>
     </div>
