--- a/src/main/webapp/WEB-INF/views/StartPosition.html
+++ b/src/main/webapp/WEB-INF/views/StartPosition.html
@@ -75,7 +75,7 @@ left = 80%;
     </style>
 </head>
 <body>
-<form method="get" action="Journal">
+<form method="get" action="JournalList">
     <div class="container1">
         <button type="submit">Journal</button>
     </div>
