--- a/src/main/webapp/WEB-INF/views/PersonView.html
+++ b/src/main/webapp/WEB-INF/views/PersonView.html
@@ -111,7 +111,7 @@ span.psw {
         </div>
         <div class="containerright">
         <label><b>Classsification</b></label>
-        <select size="1"  required="true" >
+        <select size="1"  required="true"  name="select">
             <option selected>Choose a classification</option>
             <div th:utext = "${options}"/>
         </select>
