--- a/src/main/webapp/WEB-INF/views/SettingsView.html
+++ b/src/main/webapp/WEB-INF/views/SettingsView.html
@@ -2,7 +2,7 @@
 <html xmlns:th = "http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Setting</title>
+    <title>Journal</title>
     <style type="text/css">
         /* Bordered form */
 
