+ Login and password authorization.
On the "Settings" page, when loading the View, a list is displayed from the "Status" and "Predmet" tables.
Added the ability to delete and add positions, as well as dynamic page refresh.

On the "Persons" page, when loading the View, a list from the "Status" table is displayed.

Create JournalView;

add person;
-
in procces:

sort in date and predmet.

Создание  и закрытие журнала.

выход.

фронт на кнопки выхода

--- a/src/main/webapp/WEB-INF/views/PersonView.html
+++ b/src/main/webapp/WEB-INF/views/PersonView.html
@@ -83,6 +83,8 @@ width:100%;
 
 
 
+
+
     </style>
 </head>
 <body>
@@ -98,9 +100,10 @@ width:100%;
                 <input type="number" placeholder="Enter surname" name="nomGroup" required>
             </div>
             <div>
-                <div><label>
-                    <b>Surname</b>
-                </label>
+                <div>
+                    <label>
+                        <b>Surname</b>
+                    </label>
                 </div>
                 <div>
                     <input type="text" placeholder="Enter surname" name="surname" required>
@@ -139,10 +142,18 @@ width:100%;
                 </div>
 
                 <div>
-                    <div><label><b>Login</b></label></div>
-                    <div><input type="text" placeholder="Enter login/uname" name="login" required></div>
-                    <div><label><b>Password</b></label></div>
-                    <div><input type="password" placeholder="Enter Password" name="psw" required></div>
+                    <div>
+                        <label><b>Login</b></label>
+                    </div>
+                    <div>
+                        <input type="text" placeholder="Enter login/uname" name="login" required>
+                    </div>
+                    <div>
+                        <label><b>Password</b></label>
+                    </div>
+                    <div>
+                        <input type="password" placeholder="Enter Password" name="psw" required>
+                    </div>
                     <div>
                         <button type="submit">Save</button>
                     </div>
