--- a/src/main/webapp/WEB-INF/views/JournalView.html
+++ b/src/main/webapp/WEB-INF/views/JournalView.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th = "http://www.thymeleaf.org" lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Setting</title>
@@ -101,14 +101,15 @@ span.psw {
 table{
 height:100%;
 }
+
     </style>
 </head>
 <body>
 <form method="post" action="JournalList">
     <div class="allForms">
         <div class="tableJournal">
-            <label><h3 align="center" th:text = "${dataJournalAndPredmet}"></h3></label>
-            <input type="text" placeholder="Enter lesson topic" name="lessonTopic" >
+            <label><h3 align="center" th:text="${dataJournalAndPredmet}"></h3></label>
+            <input type="text" placeholder="Enter lesson topic" name="lessonTopic">
             <table bgcolor="#CCCCFF" border="1px">
                 <tbody>
                 <tr bgcolor="#C2A3E0" width="1000px">
@@ -117,31 +118,29 @@ height:100%;
                     <th width="100px">Attendense</th>
                     <th width="100px">Assessment</th>
                 </tr>
-                    <div th:utext = "${n}"></div>
+                <div th:utext="${n}"></div>
                 </tbody>
             </table>
         </div>
-        <div class="containerLeft" >
+        <div class="containerLeft">
 
-        <div><label>No group</label></div>
-        <div><input type="number" placeholder="No" name="NomGroup" required></div>
-        <div><label>Date</label></div>
-        <input type="date" placeholder="dd.mm.yyyy" name="dateLanguage" >
-        <div><label>Subject</label></div>
-        <div>
-            <select size="1"  required="true" name="select">
-                <option selected></option>
-                <div th:utext = "${options}"></div>
-            </select>
+            <div><label>No group</label></div>
+            <div><input type="number" placeholder="No" name="NomGroup" min="0" max="1000000"></div>
+            <div><label>Date</label></div>
+            <input type="date" name="dateLanguage" th:value="${date}" min="1900-01-01" max="2999-01-01">
+            <div><label>Subject</label></div>
+            <div>
+                <select size="1" name="select">
+                    <option selected>all subject</option>
+                    <div th:utext="${options}"></div>
+                </select>
+            </div>
+            <div class="buttonLeft">
+                <button type="submit" name="but" value="searchButton">Search</button>
+                <button type="submit" name="but" value="сreateLesson">Create Lesson</button>
+                <button type="submit" name="but" value="сloseLesson">Close Lesson</button>
+            </div>
         </div>
-        <div class="buttonLeft">
-            <button type="submit" name="but" value="searchButton">Search</button>
-            <button type="submit" name="but" value="сreateLesson">Create Lesson</button>
-            <button type="submit" name="but" value="сloseLesson">Close Lesson</button>
-        </div>
-    </div>
-
-
     </div>
 </form>
 </body>
