+ Login and password authorization.
On the "Settings" page, when loading the View, a list is displayed from the "Status" and "Predmet" tables.
Added the ability to delete and add positions, as well as dynamic page refresh.

On the "Persons" page, when loading the View, a list from the "Status" table is displayed.

Create JournalView;

add person;
-
in procces:

sort in date and predmet.

Создание  и закрытие журнала.

выход.

фронт на кнопки выхода

--- a/src/main/webapp/WEB-INF/views/JournalView.html
+++ b/src/main/webapp/WEB-INF/views/JournalView.html
@@ -125,9 +125,9 @@ height:100%;
         <div class="containerLeft">
 
             <div><label>No group</label></div>
-            <div><input type="number" placeholder="0" name="NomGroup" min="0" max="1000000"></div>
+            <div><input type="number" placeholder="0" name="NomGroup" min="0" max="1000000" required></div>
             <div><label>Date</label></div>
-            <input type="date" name="dateLanguage" th:value="${date}" min="1900-01-01" max="2999-01-01">
+            <input type="date" name="dateLanguage" th:value="${date}"  placeholder="dd-mm-yyyy" min="1900-01-01" max="2999-01-01">
             <div><label>Subject</label></div>
             <div>
                 <select size="1" name="select">
@@ -136,7 +136,7 @@ height:100%;
                 </select>
             </div>
             <div class="buttonLeft">
-                <button type="submit" name="but" value="searchButton" >Search</button>
+                <button name="but" value="searchButton">Search</button>
                 <button type="submit" name="but" value="сreateLesson">Create Lesson</button>
                 <button type="submit" name="but" value="сloseLesson">Close Lesson</button>
             </div>
